# Mailify

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml  site.yml
crates/mailify-api/: Cargo.toml
crates/mailify-api/src/: error.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/mailify-api/src/routes/: auth.rs  config.rs  health.rs  mail.rs  mod.rs  templates.rs
crates/mailify-api/tests/: health.rs  it_e2e.rs
crates/mailify-auth/: Cargo.toml
crates/mailify-auth/examples/: hash-key.rs  issue-token.rs
crates/mailify-auth/src/: api_key.rs  bootstrap.rs  jwt.rs  lib.rs  middleware.rs
crates/mailify-config/: Cargo.toml
crates/mailify-config/src/: lib.rs  theme.rs
crates/mailify-config/tests/: load.rs
crates/mailify-core/: Cargo.toml
crates/mailify-core/src/: email.rs  error.rs  lib.rs  priority.rs  smtp_override.rs
crates/mailify-core/tests/: smtp_override.rs
crates/mailify-queue/: Cargo.toml
crates/mailify-queue/src/: job.rs  lib.rs  worker.rs
crates/mailify-queue/tests/: it_postgres.rs  job_serde.rs
crates/mailify-smtp/: Cargo.toml
crates/mailify-smtp/src/: lib.rs
crates/mailify-smtp/tests/: it_mailpit.rs
crates/mailify-templates/: Cargo.toml
crates/mailify-templates/src/: lib.rs  registry.rs  renderer.rs
crates/mailify-templates/tests/: registry.rs  renderer.rs
docker/: Dockerfile
docs/: index.md
docs/contributing/: architecture.md  dev-setup.md  overview.md
docs/getting-started/: concepts.md  installation.md  installation.mdx  quickstart.md
docs/guides/: auth-and-tokens.md  configure-smtp.md  configure-theme.md  deploy-docker.md  per-job-smtp-override.md
docs/reference/: cli.md  config.md  http-api.md  template-contract.md
docs/troubleshooting/: common-errors.md  debugging.md  faq.md
install/: install.ps1  install.sh
site/: .gitignore  astro.config.mjs  package.json
site/public/: CNAME  robots.txt
site/scripts/: gen-og.mjs
site/src/components/: ArchitectureDiagram.astro  CodeTabs.astro  FeatureGrid.astro  Hero.astro  MarketingLayout.astro  SiteFooter.astro  SiteHeader.astro  ThemeShowcase.astro  ThemeToggle.astro
site/src/pages/: 404.astro  index.astro  pricing.astro
site/src/styles/: global.css  tokens.css
templates-parser/: package.json  tsconfig.json
templates-parser/emails/_components/: Button.tsx  Heading.tsx  Layout.tsx
templates-parser/emails/account-deleted/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/alert/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/announcement/: en.tsx  fr.tsx  subject.en.txt  text.en.txt
templates-parser/emails/feedback-request/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/invite/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/invoice/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/login-new-device/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/magic-link/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/newsletter/: en.tsx  fr.tsx  subject.en.txt  text.en.txt
templates-parser/emails/order-confirm/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/otp/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/password-changed/: en.tsx  fr.tsx  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/payment-failed/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/re-engagement/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/receipt/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/refund/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/report/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/reset-password/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/shipping-update/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/subscription-renew/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/two-factor-code/: en.tsx  fr.tsx  subject.en.txt  text.en.txt  text.fr.txt
templates-parser/emails/verify-email/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/emails/welcome/: en.tsx  fr.tsx  subject.en.txt  subject.fr.txt  text.en.txt  text.fr.txt
templates-parser/scripts/: generate.ts  post-build.ts  templates.config.ts
