[workspace]
resolver = "2"
members = [
    "crates/mailify-core",
    "crates/mailify-config",
    "crates/mailify-templates",
    "crates/mailify-smtp",
    "crates/mailify-queue",
    "crates/mailify-auth",
    "crates/mailify-api",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.88"
authors = ["Doni Lite"]
license = "MIT"
repository = "https://github.com/donilite/mailify"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Web
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "timeout"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# Templating
minijinja = { version = "2", features = ["loader"] }

# Queue
apalis = { version = "0.6", features = ["limit", "retry"] }
apalis-sql = { version = "0.6", features = ["postgres", "tokio-comp"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Errors
thiserror = "1"
anyhow = "1"

# Tracing / logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1"
validator = { version = "0.18", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Dev
testcontainers = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
