[package]
name = "mailify-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mailify"
path = "src/main.rs"

[dependencies]
mailify-core = { path = "../mailify-core" }
mailify-config = { path = "../mailify-config" }
mailify-templates = { path = "../mailify-templates" }
mailify-smtp = { path = "../mailify-smtp" }
mailify-queue = { path = "../mailify-queue" }
mailify-auth = { path = "../mailify-auth" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
url = "2"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
