[package]
name = "mailify-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mailify"
path = "src/main.rs"

[dependencies]
mailify-core = { path = "../mailify-core", version = "0.1.2" }
mailify-config = { path = "../mailify-config", version = "0.1.2" }
mailify-templates = { path = "../mailify-templates", version = "0.1.2" }
mailify-smtp = { path = "../mailify-smtp", version = "0.1.2" }
mailify-queue = { path = "../mailify-queue", version = "0.1.2" }
mailify-auth = { path = "../mailify-auth", version = "0.1.2" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
url = "2"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
mailify-auth = { path = "../mailify-auth", version = "0.1.2" }
mailify-queue = { path = "../mailify-queue", version = "0.1.2" }
mailify-smtp = { path = "../mailify-smtp", version = "0.1.2" }
mailify-templates = { path = "../mailify-templates", version = "0.1.2" }
mailify-core = { path = "../mailify-core", version = "0.1.2" }
