[package]
name = "mailify-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mailify-core = { path = "../mailify-core", version = "0.1.2" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
