[package]
name = "mailify-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mailify-core = { path = "../mailify-core" }
mailify-config = { path = "../mailify-config" }
mailify-smtp = { path = "../mailify-smtp" }
mailify-templates = { path = "../mailify-templates" }
apalis = { workspace = true }
apalis-sql = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
