[package]
name = "mailify-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mailify-core = { path = "../mailify-core", version = "0.1.2" }
mailify-config = { path = "../mailify-config", version = "0.1.2" }
mailify-smtp = { path = "../mailify-smtp", version = "0.1.2" }
mailify-templates = { path = "../mailify-templates", version = "0.1.2" }
apalis = { workspace = true }
apalis-sql = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
