[package]
name = "mailify-smtp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mailify-core = { path = "../mailify-core" }
mailify-config = { path = "../mailify-config" }
lettre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
