[package]
name = "mailify-smtp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mailify-core = { path = "../mailify-core" }
mailify-config = { path = "../mailify-config" }
lettre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
uuid = { workspace = true }
urlencoding = "2"
mailify-config = { path = "../mailify-config" }
